<resources>
    <string name="app_name">MY APP PORTFOLIO</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
</resources>
