<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.purpletalk.myappportfolio.MainActivity">

    <TextView
        android:text="My Nanodegree Apps!"
        android:layout_width="wrap_content"
        android:textSize="@dimen/textsize_22"
        android:layout_marginTop="@dimen/dimen_14"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dimen_30"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/view_spotify_streamer"
            android:text="@string/spotify_streamer"
            style="@style/button_style"
            />

        <Button
            android:id="@+id/view_scores_app"
            android:text="@string/scores_app"
            style="@style/button_style"
            />

        <Button
            android:id="@+id/view_library_app"
            android:text="@string/library_app"
            style="@style/button_style"
            />

        <Button
            style="@style/button_style"
            android:id="@+id/view_build_it_bigger"
            android:text="@string/build_it_bigger"
            />

        <Button
            style="@style/button_style"
            android:id="@+id/view_xyz_reader"
            android:text="@string/xyz_reader"
            />

        <Button
            android:background="?attr/colorAccent"
            android:id="@+id/view_capstone"
            android:text="@string/capstone"
            style="@style/button_style"
            />
    </LinearLayout>
</RelativeLayout>
